--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,7 +1,17 @@
 PORT = 4000
 NODE_ENV = DEVELOPMENT
 
+
 DB_LOCAL_URI = mongodb://localhost:27017/shop
 
 JWT_SECRET = sdfkjhsdfjgbweubwe873brkj23jbsdjb
 JWT_EXPIRES_TIME = 7d
+COOKIE_EXPIRES_TIME= 7
+
+
+SMTP_HOST = smtp.mailtrap.io
+SMTP_PORT = 2525
+SMTP_EMAIL = 02ebef6bb768dd
+SMTP_PASS = 9cf2c9a425ac20
+SMTP_FROM_EMAIL = noreply@shop.com
+SMTP_FROM_NAME = shop
