--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-redis": "^6.0.0",
     "mongoose": "^6.2.3",
     "nodemailer": "^6.7.2",
     "validator": "^13.7.0"
