--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "countries-list": "^2.6.1",
     "history": "^5.3.0",
     "js-cookie": "^3.0.1",
+    "mdbreact": "^5.2.0",
+    "metro": "^0.56.0",
     "rc-slider": "^10.0.0-alpha.4",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
